--- a/DressApp/src/app/landing/landing.component.html
+++ b/DressApp/src/app/landing/landing.component.html
@@ -1,24 +1,30 @@
-<h1>Sign In</h1>
-<form (submit)="login()" #formData="ngForm"  method="post">
-  <label>Email</label>
-  <input type="text" [(ngModel)]="user.email" required name="getemail" #getemail="ngModel">
-  <div class="red" *ngIf="getemail.errors && (getemail.dirty || getemail.touched)">
-        <div [hidden]="!getemail.errors.required">
-          Email is required
-        </div>
-  </div>   
-  <label>Password</label>
-  <input type="password" [(ngModel)]="user.password" required name="getpassword" #getpassword="ngModel">
-  <div class="red" *ngIf="getpassword.errors && (getpassword.dirty || getpassword.touched)">
-        <div [hidden]="!getpassword.errors.required">
-          Password is required
-        </div>
-  </div> 
-  <input [disabled] = "getemail.errors || getpassword.errors"  type="submit" value="Submit">
-</form>
+<a class="waves-effect waves-light btn"(click)="getLogin()">Log In</a>
+<a class="waves-effect waves-light btn"(click)="SignUp()">Sign Up</a>
+<div id="panel">
+  <h1>Sign In</h1>
+  <form (submit)="login()" #formData="ngForm"  method="post">
+    
+    <label><i class="material-icons prefix">email</i> Email</label>
+    <input type="text" [(ngModel)]="user.email" required name="getemail" #getemail="ngModel">
+    <div class="red" *ngIf="getemail.errors && (getemail.dirty || getemail.touched)">
+          <div [hidden]="!getemail.errors.required">
+            Email is required
+          </div>
+    </div>   
+    <label>Password</label>
+    <input type="password" [(ngModel)]="user.password" required name="getpassword" #getpassword="ngModel">
+    <div class="red" *ngIf="getpassword.errors && (getpassword.dirty || getpassword.touched)">
+          <div [hidden]="!getpassword.errors.required">
+            Password is required
+          </div>
+    </div> 
+    <input class="btn waves-effect waves-light" [disabled] = "getemail.errors || getpassword.errors"  type="submit" value="Submit">
+  </form>
 
-<span *ngIf="errorslogin">{{errorslogin}}</span>
-
-<h1>Don't have an account? Join now</h1>
-<app-register></app-register>
+  <span *ngIf="errorslogin">{{errorslogin}}</span>
+</div>
+<div id="thatpanel">
+  <h1>Don't have an account? Join now</h1>
+  <app-register></app-register>
+</div>
 
