--- a/DressApp/src/app/newdress/newdress.component.html
+++ b/DressApp/src/app/newdress/newdress.component.html
@@ -1,6 +1,3 @@
-<p>
-  newdress component!
-</p>
 
 <h1> Adding a new dress</h1>
 <div>
@@ -20,6 +17,8 @@
 <Label>Rent To </Label>
 <input type="date" [(ngModel)]="dress.rentto" name="rentto" ><br> -->
 
-<input type="submit" value="Add a new dress">
+<input class="waves-effect waves-light btn" type="submit" value="Add a new dress">
+<a class="waves-effect waves-light btn" [routerLink]="['/dashboard']">Cancel</a>
+
 </form>
 </div>
