--- a/DressApp/src/styles.css
+++ b/DressApp/src/styles.css
@@ -3,7 +3,12 @@ body {
      display: flex;
      min-height: 100vh;
      flex-direction: column;
+font-family: 'News Cycle', 'Material Icons', sans-serif;
+
+
  }
  main {
      flex: 1 0 auto;
  }
+
+ 
